--- a/auditorias/templates/auditorias/_auditorias.html
+++ b/auditorias/templates/auditorias/_auditorias.html
@@ -38,8 +38,8 @@
           <tbody>
             {% for i in auditoria %}
             <tr>
-              <td>{{i.teacher}}</th>
-              <td>{{i.student}}</a></td>
+              <td>{{i.teacher}}</td>
+              <td>{{i.student}}</td>
               <td>{{i.seccion.nrc}}</td>
               <td>{{i.publish_date}}</td>
             </tr>
