--- a/auditorias/templates/auditorias/auditorias.html
+++ b/auditorias/templates/auditorias/auditorias.html
@@ -1,212 +1,53 @@
-
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% block stylesheet %}
 
-    <title>{% block title %}Universidad Andrés Bello | Retroalimentación Inmediata {% endblock title %}</title>
+<link href="{% static 'css/plugins/sweetalert/sweetalert.css' %}" rel="stylesheet">
+<link href="{% static 'css/plugins/chosen/bootstrap-chosen.css' %}" rel="stylesheet">
+<link href="{% static 'css/ios.css' %}" rel="stylesheet">
+<link href="{% static 'css/styles.css' %}" rel="stylesheet">
 
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
-    <link href="{% static 'css/animate.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    {% block stylesheet %}{% endblock stylesheet %}
-</head>
+{% endblock stylesheet %}
 
-<body>
-    <div id="wrapper">
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            {% include "partials/_sidebar2.html" %}
-        </div>
-    </nav>
-        <div id="page-wrapper" class="gray-bg">
-        <div class="row border-bottom">
-        <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-            <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-            {% comment %}
-            {% endcomment %}
-        </div>
-            <ul class="nav navbar-top-links navbar-right pull-right">
-                <li>
-                    <span class="m-r-sm text-muted welcome-message">Bienvenido <strong> {{request.user.first_name}} {{request.user.last_name}}</strong></span>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope"></i>
-                    </a>
+
+{% block breadcrumb %}
+<div class="row wrapper border-bottom white-bg page-heading" style="padding-bottom: 0px;">
+    <div class="col-lg-10">
+        <h2>Crear Alerta</h2>
+    </div>
+    <div class="col-lg-2">
+
+    </div>
+</div>
+{% endblock breadcrumb %}
+{% block content %}
+
+<div class="container">
+        <div class="row">
+            <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 col-offset-10">
+                <h1 class = 'text-center' style="margin-top:30px;">Generar Auditoria</h1>
+
+                <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+
                     
-                    <ul class="dropdown-menu dropdown-messages">
-                    </ul>
-                </li>
-                <li class="dropdown" id="notifications">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell"></i>  <span class="label label-primary" ></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                        <li>
-                            <a href="#">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i>
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <a id="borrar"><strong class="center-text">Borrar Notificaciones</strong></a>
-                    </ul>
-                </li>
 
-
-                <li>
-                    <a href="{% url 'login' %}">
-                        <i class="fa fa-sign-out"></i> Cerrar Sesión
-                    </a>
-                </li>
-
-            </ul>
-
-        </nav>
-        </div>
-        <div>   
-                <h1>Datos Usuario</h1>
-                <h1></h1>
-                <h1></h1>
-                {%for x in umbral %}
-                <h1>Nombre :{{x.user}} Rut: {{x.rut}} Umbral:{{x.umbral}}</h1>
-                {% endfor %}
-
-                <h1>Fecha Publicación</h1>
-                <h1></h1>
-                <h1></h1>
-                {%for z in date %}
-                <h2>Fecha Actual:{{now}}</h2>
-                <h2>Fecha Publicación:{{z.publish_date}}</h2>
-                
-                {% endfor %}
-
-        </div>
-        {% block breadcrumb %}{% endblock breadcrumb %}
-            <div class="wrapper wrapper-content">
-                {% block content %}
-                {% endblock content %}
+                <input type="submit" value="Enviar" class="btn btn-primary btn-lg btn-block">
+                </form>
+                <br>
             </div>
-        <div class="footer">
-            <div class="pull-right">
-                Desarrollado por <strong></strong>.
-            </div>
-            <div>
-                <strong>Universidad Andrés Bello</strong> / Facultad de Ingeniería &copy; 2018
-            </div>
+            
         </div>
-        </div>
-
     </div>
-
-    <!-- Mainly scripts -->
-    <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
-    <script src="{% static 'js/plugins/slimscroll/jquery.slimscroll.min.js' %}"></script>
-    <script src="{% static 'js/plugins/toastr/toastr.min.js' %}"></script>
-
-    <!-- Flot -->
-    <script src="{% static 'js/plugins/flot/jquery.flot.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.tooltip.min.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.spline.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.resize.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.pie.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.symbol.js' %}"></script>
-    <script src="{% static 'js/plugins/flot/jquery.flot.time.js' %}"></script>
-
-    <!-- Peity -->
-    <script src="{% static 'js/plugins/peity/jquery.peity.min.js' %}"></script>
-    <!-- <script src="{% static 'js/demo/peity-demo.js' %}"></script> -->
-
-    <!-- Custom and plugin javascript -->
-    <script src="{% static 'js/inspinia.js' %}"></script>
-    <script src="{% static 'js/plugins/pace/pace.min.js' %}"></script>
-
-    <!-- jQuery UI -->
-    <script src="{% static 'js/plugins/jquery-ui/jquery-ui.min.js' %}"></script>
-
-    <!-- Jvectormap -->
-    <script src="{% static 'js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js' %}"></script>
-    <script src="{% static 'js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js' %}"></script>
-
-    <!-- EayPIE -->
-    <script src="{% static 'js/plugins/easypiechart/jquery.easypiechart.js' %}"></script>
-
-    <!-- SweetAlert -->
-    <script src="{% static 'js/plugins/sweetalert/sweetalert.min.js' %}"></script>
-
-    <!-- <script src="{% static 'js/plugins/sparkline/jquery.sparkline.min.js' %}"></script> -->
-
-    <!-- Sparkline demo data  -->
-    <!-- <script src="{% static 'js/demo/sparkline-demo.js' %}"></script> -->
-
-    {% block javascript %}
-
-    {% endblock javascript %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <!--
-    {%for x in umbral %}
-    <h1>Nombre:{{x.user}} Rut: {{x.rut}} Umbral:{{x.umbral}}</h1>
-    {% endfor %}
-    -->
-    <!--
-    {%for z in date %}
-    <h1>Titulo Pregunta:{{z.title}}</h1>
-    <h1>Pregunta:{{z.description}}</h1>
-    <h1>Fecha:{{z.publish_date}}</h1>
-    {% endfor %}
-    -->
-    <!--
-    {% for z in date %}
-    <div>
-        <h1>Titulo Pregunta:{{z.title}}</h1>
-    </div>
-    <div>
-        <h1>Pregunta:{{z.description}}</h1>
-    </div>
-        <div><h1>Fecha:{{z.publish_date}}</h1>
-    </div>
-    <br>
-    {% endfor %}
-    -->
-    <!--
-    {% for x in parametros_rep %}
-    <h5>{{x}}</h5>
-    {% endfor %}
-    -->
-    <!--
-    {% for z in date %}
-        {% if parametros > 0 %}
-            <h1>La pregunta,{{parametros_rep}}, ya existe</h1>
-        {% endif %}
-    {% endfor %}
-    -->
-    {% for z in date %}
-        {% for y in parametros_rep %}
-            {% if z.title == y %}
-                <h1>La pregunta,{{y}}, ya existe</h1>
-            {% endif %}
-        {% endfor %}
-    {% endfor %}
+{% endblock content %}
 
 
-</body>
-</html>
+{% block javascript %}
+<script src="{% static 'js/plugins/chosen/chosen.jquery.js' %}"></script>
+
+<script>
+    
+</script>
+
+
+{% endblock javascript %}
